# time-series-analysis-with-statsmodels-in-python

./: 2025-01-12_Time-Series-Analysis-with-statsmodels-in-Python-ea0fce203c0a.py  README.md  Statsmodels-Ercot data.ipynb  Statsmodels-Ercot data.py  Statsmodels.ipynb  Statsmodels.py  article.md  config.yaml  main.py  pyproject.toml  requirements.txt
src/: core.py
tests/: test_core.py
